--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@ $primary-color: #ffd700;
 @import 'animate.css';
 
 @font-face {
-  font-family: 'Helvetica Neue';
+  font-family: 'Helvetica Neu';
   src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
 }
 
@@ -15,4 +15,9 @@ $primary-color: #ffd700;
 @font-face {
   font-family: 'Coolvetica';
   src: url('./assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
+}
+
+input,
+textarea {
+  font-family: 'Helvetica Neu';
 }
