--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -10,39 +10,30 @@
     max-height: 90%;
   }
 
-  h1 {
-    color: #fff;
-    line-height: 53px;
-    font-size: 60px;
-    margin: 0;
-    font-family: 'Coolvetica';
-    font-weight: 400;
+  .title-letters {
+    margin-bottom: 50px;
 
-    &::before {
+    &:before {
       content: '<h1>';
       font-family: 'La Belle Aurore';
       color: $primary-color;
       font-size: 18px;
       position: absolute;
-      margin-top: -40px;
-      left: -15px;
+      margin-top: -28px;
+      left: -10px;
       opacity: 0.6;
     }
 
-    &::after {
+    &:after {
       content: '<h1/>';
       font-family: 'La Belle Aurore';
       color: $primary-color;
       font-size: 18px;
       position: absolute;
-      margin-top: 18px;
-      margin-left: 20px;
+      margin-top: 12px;
+      left: -10px;
       opacity: 0.6;
       animation: fadeIn 1s 1.7s backwards;
-    }
-
-    img {
-      width: 32px;
     }
   }
 
