--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import './variables.scss';
 @import 'animate.css';
+@import '~loaders.css/src/animations/pacman.scss';
 
 @font-face {
   font-family: 'Helvetica Neu';
@@ -19,4 +20,18 @@
 input,
 textarea {
   font-family: 'Helvetica Neu';
+}
+
+.loader-active {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  animation: fadeOut 0.8s 0.8s;
+  animation-fill-mode: forwards;
 }
