--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,1 +1,9 @@
+$background-blue: #115173;
+$black: #000;
+$chinese-silver: #ccc;
+$dark-charcoal: #333;
+$light-silver: #8d8d8d;
+$nav-background-gray: #181818;
+$nav-gray: #4d4d4e;
 $primary-color: #ffd700;
+$white: #fff;
