--- a/src/components/About/SkillsCube/SkillsCube.scss
+++ b/src/components/About/SkillsCube/SkillsCube.scss
@@ -1,3 +1,5 @@
+@import '../../../variables.scss';
+
 .stage-cube-container {
   width: 50%;
   height: 100%;
@@ -22,7 +24,7 @@
     position: absolute;
     width: 200px;
     height: 200px;
-    border: 1px solid #ccc;
+    border: 1px solid $chinese-silver;
     background: rgba(255, 255, 255, 0.4);
     text-align: center;
     font-size: 100px;
