--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -38,7 +38,7 @@
   }
 
   h2 {
-    color: #8d8d8d;
+    color: $light-silver;
     margin-top: 20px;
     font-weight: 400;
     font-size: 11px;
@@ -63,7 +63,7 @@
 
     &:hover {
       background: $primary-color;
-      color: #333;
+      color: $dark-charcoal;
     }
   }
 }
