--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,7 +1,7 @@
 @import '../../variables.scss';
 
 .nav-bar {
-  background: #181818;
+  background: $nav-background-gray;
   width: 60px;
   height: 100%;
   position: absolute;
@@ -37,7 +37,7 @@
 
     a {
       font-size: 22px;
-      color: #4d4d4e;
+      color: $nav-gray;
       display: block;
       line-height: 51px;
       height: 51px;
