--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -72,11 +72,11 @@
         opacity: 0;
         transition: all 0.3s ease-out;
       }
+    }
 
-      &:first-child {
-        &::after {
-          content: 'HOME';
-        }
+    a.home-link {
+      &::after {
+        content: 'HOME';
       }
     }
 
