--- a/src/components/About/SkillsCube/SkillsCube.scss
+++ b/src/components/About/SkillsCube/SkillsCube.scss
@@ -3,8 +3,8 @@
 .stage-cube-container {
   width: 50%;
   height: 100%;
-  top: 0;
-  padding-top: 18%;
+  top: calc(50% - 130px);
+  padding-top: 50px;
   margin-left: 0;
   position: absolute;
   right: 0;
