--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -67,3 +67,11 @@
     }
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .container.home-page {
+    .text-zone {
+      width: 70%;
+    }
+  }
+}
